fixed overflow of photos on homepage

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -65,6 +65,14 @@ html.about-home {
     }
     margin-bottom: 2em;
   }
+  @media screen and (max-width: 39.9375em) {
+    .thumbnail {
+      width: 20%;
+      height: inherit;
+    }
+  }
+
+
   // #home-wrapper {
   //   margin-top: -80px;
   // }
